<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".main_activity.ProfileActivity"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtLabelUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="30dp"
            android:text="DRIVERS"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:srcCompat="@drawable/ic_account_circle_white"/>
                <TextView
                    android:id="@+id/profile_name"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textSize="21sp"/>
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:visibility="gone"
                android:padding="50dp"
                android:id="@+id/profile_card_driver"
                android:layout_width="400dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="275dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:weightSum="2"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_weight="1"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:text="@string/label_akurasi"
                            android:textSize="20sp"
                            />
                        <TextView
                            android:gravity="center"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:text="125"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:paddingTop="10dp"
                            android:textColor="@color/colorPrimary"/>

                    </LinearLayout>
                    <LinearLayout
                        android:weightSum="2"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_weight="1"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:text="@string/label_penilaian"
                            android:textSize="20sp"
                            />
                        <TextView
                            android:gravity="center"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:text="1205"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:paddingTop="10dp"
                            android:textColor="@color/colorPrimary"/>

                    </LinearLayout>
                    <LinearLayout
                        android:weightSum="2"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_weight="1"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:text="@string/label_nilai_kendaraan"
                            android:textSize="20sp"
                            />
                        <TextView
                            android:gravity="center"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:text="360"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:paddingTop="10dp"
                            android:textColor="@color/colorPrimary"/>

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="25dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_account_circle_white" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:lines="1"
                        android:id="@+id/txtNama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_nama"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="25dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_add_location" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:lines="1"
                        android:id="@+id/txtAlamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_alamat"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="25dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_phone_android" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtNomorHape"
                        android:lines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_hp"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnLogout"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:textSize="15sp"
                    android:textColor="#FAFAFA"
                    android:background="@drawable/button_style"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="35dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="KELUAR!"/>

                <Button
                    android:id="@+id/btnUpdate"
                    style="@style/Widget.MaterialComponents.Button"
                    android:textSize="15sp"
                    android:textColor="#fff"
                    android:background="@drawable/button_style"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="35dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Update Me"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
